<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginRight="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/product_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="205dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/product_name"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/price_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rs"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_500"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>

